ChangeLog
Annot Project
Since 6/18/2011

12/22/2011	annot.player	0.1.1.4
        * Fixed a bug while playing DVD.
        * Fixed a bug while dragging annotion.

12/16/2011	annot.player	0.1.1.3
        * Added input line history.
        * Added pre-defined command to input line.

12/13/2011	annot.player	0.1.1.2
        * Windows tool chain updated. Qt library rebuilt. gSOAP updated.
        * Added disc type automatic detection.
        * Launcher dependency on msvcrt removed.
        * Offline annotation caching improved.

12/7/2011	annot.player	0.1.1.1
        * Added Fedora support.
        * Added CD/DVD device dialog. CD/DVD buffering performance improved.
        * Fixed sqlite cache creation bug in Linux.
        * Menubar enabled to all OSes.
        * Forward token digest to reduce delay on openning media.
        * Added playlist to open multiple files or folder.
        * Switched to GNU ChangeLog format.

12/2/2011	annot.player	0.1.1.0
        * Windows global mouse hook removed and replaced with native vlcore calls.
        Less mouse hanging in Windows when the app is busy.
        * Added support to play cue file.
        * Added support to play cdda. Fixed bug while openning CD on Windows.
        * Added embedded mode.
        Able to embed/play vidoe/annots in any window, such as Notepad, Photoshop, or PPStream.
        * Able to select embedded player on the top or bottom.
        * Player buttons and menues extended.
        * Added task bar icon for Windows 7.
        * Added Dwm notifier in Windows 7 to watch aero composition changes.

11/26/2011	annot.player	0.1.0.3
        * Fixed a severe bug in annot-player-0.1.0.2-win that might cause significant delay for displaying context menu.
        * Added support for navigating DVD menu on Mac OS X.
        * Added app desktop/icon on linux.

11/25/2011	annot.player	0.1.0.2
        * Added support for playing disc images such as ISO/MDF/BIN/IMG.
        * Added support for Ubuntu 11.