@@ -1,7 +1,7 @@
 namespace ServerSoap {
 /* _serversoap.h
    Generated by wsdl2h 2.8.5 from http://localhost/services/ServerAgentPort?wsdl and typemap.dat
-   2011-12-11 03:27:03 GMT
+   2011-12-24 04:38:07 GMT
 
    DO NOT INCLUDE THIS FILE DIRECTLY INTO YOUR PROJECT BUILDS
    USE THE soapcpp2-GENERATED SOURCE CODE FILES FOR YOUR PROJECT BUILDS
