@@ -1,7 +1,7 @@
 # app.pro
 # 9/3/2011
 
-VERSION = 0.1.1.4
+VERSION = 0.1.1.5
 
 CONFIG += noqt nocrt
 include(../../config.pri)
