@@ -5,7 +5,7 @@ X-AppInstall-Package=annot-player
 #X-AppInstall-Popcon=63720
 X-AppInstall-Section=universe
 
-Version=0.1.1.4
+Version=0.1.1.5
 Name=Annot Player
 Comment=Media and annot player
 Exec=annot-player %U
