@@ -2,8 +2,8 @@
 # 12/5/2011
 # See: http://fedoraproject.org/wiki/How_to_create_an_RPM_package
 # See: http://dl.atrpms.net/all/vlc.spec
-Name:	annot-player	
-Version:	0.1.1.4
+Name:	annot-player
+Version:	0.1.1.5
 Release:	1%{?dist}
 Summary:	Media and annotation player.
 
